# tryglaw-mokosz

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
src/tryglaw/: __init__.py
src/tryglaw/common/: __init__.py  db.py  errors.py  logging.py  migrations.py  models.py  security.py
src/tryglaw/mokosz/: __init__.py  __main__.py  admin_cli.py  client.py  executor.py  fileshare.py  settings.py
