[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tryglaw-mokosz"
version = "0.1.6"
description = "Tryglaw Mokosz - Restricted environment agent"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "websockets>=12.0,<14.0",
    "httpx>=0.27,<1.0",
]

[project.scripts]
tryglaw-mokosz = "tryglaw.mokosz.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tryglaw"]
